# nlp_in_practice

./: Baseline (Catboost).ipynb  Baseline(Catboost+FastText).ipynb  README.md  baseline.ipynb  pyproject.toml  submission.csv  submission_all.csv
catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
catboost_info/test/: events.out.tfevents
