[tool.poetry]
name = "nlp-in-practice"
version = "0.1.0"
description = ""
authors = ["Stanislav Marchenko <markstas55@gmail.com>"]
readme = "README.md"
packages = [{include = "nlp_in_practice"}]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.0.2"
numpy = "^1.24.3"
gensim = "^4.3.1"
torch = "^2.0.1"
pytorch-lightning = "^2.0.3"
scikit-learn = "^1.2.2"
transformers = "^4.30.2"
datasets = "^2.13.0"
tqdm = "^4.65.0"
catboost = "^1.2"
ipywidgets = "^8.0.6"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.23.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
